# real-estate-agent

./: .dockerignore  .gitignore  Dockerfile  main.py  presentation.html  pyproject.toml
app/: config.py
app/routers/: predict.py  stats.py
app/schemas/: extraction.py  response.py
app/services/: intent_classifier.py  llm_stage1.py  llm_stage2.py  market_insights.py  predictor.py
links/: Estima — AI Real Estate Pricing.url  Project-2.txt  ali-hamad0-real-estate-agent.url  presentation.html  real_estate_eda.ipynb - Colab.url  real_estate_ml.ipynb - Colab.url  real_estate_prompts.ipynb - Colab.url
notebooks/: real_estate_ml.ipynb
ui/: app.js  dashboard.html  dashboard.js  index.html  styles.css
