[project]
name = "ai-real-estate-agent"
version = "0.1.0"
description = "AI Real Estate Agent with LLM prompt chaining and ML price prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.6.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
]
